--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,12 @@ theme: minima
 plugins:
   - jekyll-feed
 
+collections:
+  pages:
+    output: true
+    permalink: /:path
+  
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
