--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,11 @@ collections:
   pages:
     output: true
     permalink: /:path
-  
 
+
+sass:
+  style: compact # possible values: nested expanded compact compressed
+  
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
